Basic changes made on the submit button

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="input-class">
                         <textarea name="" id="input_1_7" cols="30" rows="10" class="input-flip" placeholder="Tell us more*"></textarea>
                     </div>
-                    <div>
+                    <div id="sub-div">
                         <input type="submit" id="input_1_8" value="Submit">
                     </div>            
                 
@@ -139,7 +139,7 @@
                 </p>
 
                   <div class="Blogo" >
-                  <p class="copyright"> &copy;<b>2020</b> </p>
+                  <p class="copyright"> &copy;<b>2021</b> </p>
                   </div>
                
             </div>
