Core values info added to the website

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
 
-        <!-- hjjghg -->
+     
 
         <div class="form-container">
             <div class="intro-text centered-container" id="contact-text"> 
@@ -109,6 +109,36 @@
 
         </div>
 
+    </div>
+
+     <!-- Core values -->
+
+     <div class="intro-text centered-container"> 
+        Our core values
+        </div>
+    <div class="services centered-container" id="">
+        <div class="single-services">
+            <!-- <img src="images/lady_at_ATM.jpg" alt="" width="300px" height="300px"> -->
+            <img src="images/photo1.jpg" width="400px" height="300px"/>
+            <p>
+                User friendly company structure that allows constant improvement to better reach the needs of our valued customers
+                all over the world
+             </p>
+        </div>
+        <div class="single-services">
+            <img src="images/photo2.png" width="400px" height="300px"/>
+            <p>
+                Ease monitoring of ongoing activities ensure that our product consumers are safe performing their various transactions 
+                worldWide
+            </p>
+        </div>
+        <div class="single-services">
+            <img src="images/photo3.png" width="400px" height="300px"/>
+            <p>We aim at the satisfaction of our customers first by providing  reliable systems to soothe their hence creating an enviroment for
+                constant communication </p>
+        </div>
+
+    </div>
 
         
         <footer class="footer-distributed">
